fix: align text in .about-latest section to the left

--- a/style.scss
+++ b/style.scss
@@ -901,6 +901,8 @@ details {
         }
         .about-latest {
           color: light-dark($contrast2);
+          text-align: left;
+
         }
         /* 
          * RESPONSIVE LAYOUTS FOR 2 ITEMS
